# par2rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: encoder_inner.rs  gf_kernel.rs  md5_scan.rs
docs/plans/: 2026-05-22-gfni-kernel.md  2026-05-24-mb-md5-isal.md
examples/: create_from_lib.rs
src/: creator.rs  error.rs  format.rs  galois.rs  galois_simd.rs  lib.rs  main.rs  md5_impl.rs  md5_mb_neon.rs  progress.rs  reedsolomon.rs  source.rs
src/galois_simd/: gfni.rs
src/packet/: comment.rs  creator.rs  file_desc.rs  file_verify.rs  main_packet.rs  mod.rs  recovery.rs
tests/: cli.rs  golden.rs  interop_index.rs  interop_repair.rs
tests/common/: mod.rs
