[package]
name = "par2rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "PAR2 file create-only port of par2cmdline in Rust"
license = "GPL-2.0-or-later"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif", "dep:walkdir"]

[dependencies]
md-5 = "0.10"
crc32fast = "1.4"
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
walkdir = { version = "2", optional = true }
thiserror = "1"
cpufeatures = "0.2"
rayon = "1.10"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "par2rust"
required-features = ["cli"]

[[example]]
name = "create_from_lib"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
